[tool.poetry]
name = "shelob-app"
version = "0.1.0"
description = ""
authors = ["Alexy Long <alexy.long@orange.fr>", "Loïc Pinsard <muream@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pytest = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
